ing-tls/php-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpserver-deployment
  labels:
    app: phpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phpserver
  template:
    metadata:
      labels:
        app: phpserver
    spec:
      containers:
      - name: phpserver-container
        image: dbgurum/phpserver:2.0
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
  labels:
    app: goapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
      - name: goapp-container
        image: ohhong/goapp:1.0
        ports:
        - containerPort: 9090
