ing-tls/phpserver-go-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpserver-lb
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: phpserver

---

apiVersion: v1
kind: Service
metadata:
  name: goapp-lb
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9090
  selector:
    app: goapp
