ing-tls/phpserver-go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpserver-goapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - php.kakao.io
    - goapp.kakao.io
    secretName: k8s-secret
  rules:
  - host: php.kakao.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpserver-lb
            port:
              number: 80
  - host: goapp.kakao.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goapp-lb
            port:
              number: 80
